--- a/binance/style.css
+++ b/binance/style.css
@@ -58,6 +58,16 @@ body{
     outline: none;
     border: none;
     margin-top: 26px;
+    background-color: transparent;
+  }
+  .dropbtn-search {
+    color: rgb(0, 0, 0);
+    padding-left: 25px;
+    font-size: 16px;
+    outline: none;
+    border: none;
+    margin-top: 26px;
+    background-color: transparent;
   }
   .left{
     color: rgba(0, 0, 0, 0.289);
